--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
@@ -27,7 +27,7 @@
         <link src="favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
         <link src="favicon-96x96.png" rel="icon" type="image/png" sizes="96x96" />
         <link src="favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
-        <link src="manifest.json" rel="manifest" href="/manifest.json" />
+        <link src="manifest.json" rel="manifest" />
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
