BaseImages: major nginx-php main 7.0.0

--- a/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_LandingPage/view/frontend/templates/landing_page.phtml
+++ b/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_LandingPage/view/frontend/templates/landing_page.phtml
@@ -251,7 +251,7 @@ $enterprise = $block->getEnterpriseProduct();
 <!--                <ion-icon name="attach-outline"></ion-icon>-->
 <!---->
 <!--                <p class="review">-->
-<!--                    I cannot stress how important it is to have all of our information in one central place. We use ManagePro to vestibulum mi malesuada scelerisque et bibendum sapien vivamus ac.-->
+<!--                    I cannot stress how important it is to have all of our information in one central place. We use XPipe to vestibulum mi malesuada scelerisque et bibendum sapien vivamus ac.-->
 <!--                </p>-->
 <!---->
 <!--                <p class="author-name">-->
@@ -459,7 +459,7 @@ $enterprise = $block->getEnterpriseProduct();
         <div class="row faqs">
             <div class="col">
                 <h3 class="question">
-                    Is there a free version of ManagePro?
+                    Is there a free version of XPipe?
                 </h3>
                 <p class="para-line answer">
                     Tincidunt morbi amet rhoncus risus non ut at amet, molestie scelerisque consequat porta ullamcorper habitant elementum lacinia lectus adipiscing donec.
@@ -501,7 +501,7 @@ $enterprise = $block->getEnterpriseProduct();
         <div class="row faqs">
             <div class="col">
                 <h3 class="question">
-                    Can you pay for ManagePro monthly?
+                    Can you pay for XPipe monthly?
                 </h3>
                 <p class="para-line answer">
                     Venenatis purus, leo, ac sapien tempus diam tellus in aenean turpis nibh aenean augue mauris nulla eu, quis amet, semper eu amet nisl tellus.
@@ -522,7 +522,7 @@ $enterprise = $block->getEnterpriseProduct();
         <div class="row faqs">
             <div class="col">
                 <h3 class="question">
-                    Does ManagePro offer plans for students?
+                    Does XPipe offer plans for students?
                 </h3>
                 <p class="para-line answer">
                     Viverra vestibulum, nibh elit nisl in ultrices turpis egestas maecenas ut sit ut neque massa tortor in ultricies sem dictum.
