--- a/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Chat/view/adminhtml/layout/adminhtml_dashboard_index.xml
+++ b/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Chat/view/adminhtml/layout/adminhtml_dashboard_index.xml
@@ -6,11 +6,18 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="Sindria_Chat::css/normalize.min.css"/>
+        <css src="Sindria_Chat::css/jquery.mCustomScrollbar.min.css"/>
+        <css src="Sindria_Chat::css/chat.css"/>
+    </head>
+
     <update handle="styles" />
+
     <body>
         <referenceContainer name="page.main.actions">
-            <referenceBlock name="store_switcher" remove="true" />
-            <referenceBlock name="refresh_statistics" remove="true" />
+<!--            <referenceBlock name="store_switcher" remove="true" />-->
+<!--            <referenceBlock name="refresh_statistics" remove="true" />-->
         </referenceContainer>
 
         <referenceContainer name="content">
@@ -31,13 +38,13 @@
 <!--            </referenceBlock>-->
 
 
-
+            <block class="Magento\Backend\Block\Template" name="xpipe_chat" after="" template="Sindria_Chat::chat.phtml"/>
         </referenceContainer>
 
 
         <referenceContainer name="footer">
 
-            <block class="Magento\Backend\Block\Template" name="xpipe_chat" after="" template="Sindria_Chat::chat.phtml"/>
+
 
         </referenceContainer>
     </body>
