--- a/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Backend/view/adminhtml/layout/default.xml
+++ b/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Backend/view/adminhtml/layout/default.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <title>XPipe Dashboard</title>
+        <title>XPipe</title>
 
         <link src="Sindria_Backend::apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
         <link src="Sindria_Backend::apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
@@ -16,6 +16,7 @@
         <link src="Sindria_Backend::favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
         <link src="Sindria_Backend::favicon-96x96.png" rel="icon" type="image/png" sizes="96x96" />
         <link src="Sindria_Backend::favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+        <link src="Sindria_Backend::favicon.ico" rel="icon" sizes="16x16" />
         <link src="Sindria_Backend::manifest.json" rel="manifest" />
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
