fix block in chat module

--- a/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Chat/view/adminhtml/layout/adminhtml_dashboard_index.xml
+++ b/Core/xpipe-ecommerce/src/app/code/Sindria/Sindria_Chat/view/adminhtml/layout/adminhtml_dashboard_index.xml
@@ -38,7 +38,7 @@
 <!--            </referenceBlock>-->
 
 
-            <block class="Magento\Backend\Block\Template" name="xpipe_chat" after="" template="Sindria_Chat::chat.phtml"/>
+            <block class="Magento\Backend\Block\Template" name="xpipe_chat" after="-" template="Sindria_Chat::chat.phtml"/>
         </referenceContainer>
 
 
