Core: armonizzazione stili css storefront - tutto omogeneo con il tema xpipe

--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/web/css/source/_extends.less
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/web/css/source/_extends.less
@@ -3,6 +3,7 @@
 //  * See COPYING.txt for license details.
 //  */
 
+
 //
 //  List default styles reset
 //  ---------------------------------------------
@@ -1953,3 +1954,7 @@
         }
     }
 }
+
+
+//@import '_dummy_compile.less';
+//@import 'xpipe-style.less';
