--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/web/css/source/_variables.less
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/web/css/source/_variables.less
@@ -12,8 +12,12 @@
 //  ---------------------------------------------
 
 //  Fonts
-@font-family-name__base: 'Open Sans';
+//@font-family-name__base: 'Open Sans';
+//@font-family__base: @font-family-name__base, @font-family__sans-serif;
+// Use Poppins as the base font
+@font-family-name__base: 'Poppins';
 @font-family__base: @font-family-name__base, @font-family__sans-serif;
+
 
 //  Colors nesting
 @page__background-color: @color-white;
