--- a/Modules/LandingPage/view/frontend/templates/logo.phtml
+++ b/Modules/LandingPage/view/frontend/templates/logo.phtml
@@ -47,7 +47,14 @@ $logoHeight = $logoSizeResolver !== null && $logoSizeResolver->getHeight()
         color: #333;
         display: table-cell;
         vertical-align: middle;
+
+        font-family: 'Inter', sans-serif;
+        font-size: 22.4px; /* equivalente a 1.4rem con html = 16px */
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.42857143;
     }
+
 
 
 
