--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
@@ -14,6 +14,8 @@
         <font src="fonts/opensans/bold/opensans-700.woff2"/>
         <font src="fonts/Luma-Icons.woff2"/>
 
+        <link src="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" src_type="url" rel="stylesheet" />
+
         <link src="apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
         <link src="apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
         <link src="apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
@@ -32,6 +34,8 @@
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
+
+        <css src="css/xpipe-topbar.css"/>
 
 <!--        <css src="css/custom.css" />-->
 <!--        <css src="Sindria_LandingPage::css/style.css"/>-->
