--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
@@ -7,41 +7,37 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <!-- Viewport -->
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-        <!-- Fonts -->
         <font src="fonts/opensans/light/opensans-300.woff2"/>
         <font src="fonts/opensans/regular/opensans-400.woff2"/>
         <font src="fonts/opensans/semibold/opensans-600.woff2"/>
         <font src="fonts/opensans/bold/opensans-700.woff2"/>
         <font src="fonts/Luma-Icons.woff2"/>
-        <link src="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
 
-        <!-- Favicon / Icon / Manifest -->
-        <link rel="apple-touch-icon" sizes="57x57" src="apple-icon-57x57.png"/>
-        <link rel="apple-touch-icon" sizes="60x60" src="apple-icon-60x60.png"/>
-        <link rel="apple-touch-icon" sizes="72x72" src="apple-icon-72x72.png"/>
-        <link rel="apple-touch-icon" sizes="76x76" src="apple-icon-76x76.png"/>
-        <link rel="apple-touch-icon" sizes="114x114" src="apple-icon-114x114.png"/>
-        <link rel="apple-touch-icon" sizes="120x120" src="apple-icon-120x120.png"/>
-        <link rel="apple-touch-icon" sizes="144x144" src="apple-icon-144x144.png"/>
-        <link rel="apple-touch-icon" sizes="152x152" src="apple-icon-152x152.png"/>
-        <link rel="apple-touch-icon" sizes="180x180" src="apple-icon-180x180.png"/>
+        <link src="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" src_type="url" rel="stylesheet" />
 
-        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
-        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
-        <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96"/>
-        <link rel="icon" type="image/png" href="android-icon-192x192.png" sizes="192x192"/>
-        <link rel="icon" type="image/x-icon" src="favicon.ico"/>
-        <link rel="shortcut icon" type="image/x-icon" src="favicon.ico"/>
+        <link src="apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
+        <link src="apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
+        <link src="apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+        <link src="apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+        <link src="apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+        <link src="apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+        <link src="apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
+        <link src="apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+        <link src="apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+        <link src="android-icon-192x192.png" rel="icon" type="image/png" sizes="192x192" />
+        <link src="favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
+        <link src="favicon-96x96.png" rel="icon" type="image/png" sizes="96x96" />
+        <link src="favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+        <link src="favicon.ico" rel="icon" sizes="16x16" />
+        <link src="manifest.json" rel="manifest" />
+        <meta name="msapplication-TileColor" content="#ffffff" />
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+        <meta name="theme-color" content="#ffffff" />
 
-        <link rel="manifest" href="manifest.json"/>
-        <meta name="msapplication-TileColor" content="#ffffff"/>
-        <meta name="msapplication-TileImage" content="ms-icon-144x144.png"/>
-        <meta name="theme-color" content="#ffffff"/>
-
-        <!-- Custom CSS -->
         <css src="css/xpipe-topbar.css"/>
+
+<!--        <css src="css/custom.css" />-->
+<!--        <css src="Sindria_LandingPage::css/style.css"/>-->
     </head>
 </page>
