Modules: patch some bugs storefront - IaC: patch job for postdeploy and added static pvc

--- a/Modules/Cms/view/frontend/layout/cms_index_index.xml
+++ b/Modules/Cms/view/frontend/layout/cms_index_index.xml
@@ -12,8 +12,8 @@
         </referenceContainer>
 
         <!-- Aggiunge un nuovo block vuoto o personalizzato -->
-        <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template" name="xpipe.home.custom" template="Sindria_Cms::blank.phtml"/>
-        </referenceContainer>
+<!--        <referenceContainer name="content">-->
+<!--            <block class="Magento\Framework\View\Element\Template" name="xpipe.home.custom" template="Sindria_Cms::blank.phtml"/>-->
+<!--        </referenceContainer>-->
     </body>
 </page>
