--- a/Modules/Cart/view/frontend/layout/default.xml
+++ b/Modules/Cart/view/frontend/layout/default.xml
@@ -7,7 +7,7 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-<!--        <css src="Sindria_Cart::css/style.css"/>-->
+<!--        <css src="Sindria_Cart::css/style.css" sortOrder="999"/>-->
     </head>
     <body>
 
