fix invalid xml css tag attribute

--- a/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
+++ b/Core/xpipe-ecommerce/src/app/design/frontend/Sindria/xpipe/Magento_Theme/layout/default_head_blocks.xml
@@ -35,7 +35,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
 
-        <css src="css/xpipe-topbar.css"/>
+<!--        <css src="css/xpipe-topbar.css"/>-->
 
 <!--        <css src="css/custom.css" />-->
 <!--        <css src="Sindria_LandingPage::css/style.css"/>-->
