--- a/Modules/Cart/view/frontend/layout/cms_index_index.xml
+++ b/Modules/Cart/view/frontend/layout/cms_index_index.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Sindria_Cart::css/minicart-popup.css" sortOrder="999"/>
+        <css src="Sindria_Cart::css/minicart-popup.css"/>
+<!--        <css src="Sindria_Cart::css/minicart-popup.css" sortOrder="999"/>-->
     </head>
 </page>
