--- a/Cms/V1/Module/News/view/adminhtml/layout/default.xml
+++ b/Cms/V1/Module/News/view/adminhtml/layout/default.xml
@@ -2,6 +2,6 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Core_News::css/news-menu.css"/>
+        <css src="Cms_News::css/news-menu.css"/>
     </head>
 </page>
