--- a/Cms/V1/Module/News/view/frontend/templates/news.phtml
+++ b/Cms/V1/Module/News/view/frontend/templates/news.phtml
@@ -2,7 +2,7 @@
 
 
 use Magento\Framework\View\Element\Template;
-use Sindria\News\ViewModel\NewsViewModel;
+use Cms\News\ViewModel\NewsViewModel;
 
 /** @var Template $block */
 /** @var NewsViewModel $viewModel */
