--- a/Cms/V1/Module/News/view/adminhtml/templates/editor.phtml
+++ b/Cms/V1/Module/News/view/adminhtml/templates/editor.phtml
@@ -3,7 +3,7 @@
 ?>
 
 <!-- TinyMCE core -->
-<script type="text/javascript" src="<?= $block->getViewFileUrl('Core_News::js/tinymce/tinymce.min.js') ?>"></script>
+<script type="text/javascript" src="<?= $block->getViewFileUrl('Cms_News::js/tinymce/tinymce.min.js') ?>"></script>
 
 <script type="text/javascript">
     require(['jquery', 'uiRegistry', 'domReady!'], function($, registry) {
@@ -33,8 +33,8 @@
                     license_key: 'gpl', // Elimina l'avviso della licenza in console
                     plugins: 'lists link image media table code help wordcount',
                     toolbar: 'undo redo | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help',
-                    skin_url: '<?= $block->getViewFileUrl('Core_News::js/tinymce/skins/ui/oxide') ?>',
-                    content_css: '<?= $block->getViewFileUrl('Core_News::js/tinymce/skins/content/default/content.min.css') ?>',
+                    skin_url: '<?= $block->getViewFileUrl('Cms_News::js/tinymce/skins/ui/oxide') ?>',
+                    content_css: '<?= $block->getViewFileUrl('Cms_News::js/tinymce/skins/content/default/content.min.css') ?>',
                     setup: function (editor) {
                         editor.on('change', function () {
                             console.log('✍️ TinyMCE content changed');
@@ -53,13 +53,13 @@
         function updateMagentoField() {
             console.log('🔎 Trying to update KO ViewModel for content field...');
 
-            var field = registry.get('Core_news_form.Core_news_form.general.content');
+            var field = registry.get('Cms_news_form.Cms_news_form.general.content');
 
             if (field) {
                 console.log('✅ KO field found, setting value.');
                 field.value($('textarea[name="news[content]"]').val());
             } else {
-                console.error('❌ KO field NOT FOUND: Core_news_form.Core_news_form.general.content');
+                console.error('❌ KO field NOT FOUND: Cms_news_form.Cms_news_form.general.content');
             }
         }
 
