--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/view/adminhtml/layout/default.xml
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/view/adminhtml/layout/default.xml
@@ -3,51 +3,51 @@
     <head>
         <title>XPipe</title>
 
-        <link src="Sindria_Backend::apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
-        <link src="Sindria_Backend::apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
-        <link src="Sindria_Backend::apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
-        <link src="Sindria_Backend::apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
-        <link src="Sindria_Backend::apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
-        <link src="Sindria_Backend::apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
-        <link src="Sindria_Backend::apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
-        <link src="Sindria_Backend::apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
-        <link src="Sindria_Backend::apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
-        <link src="Sindria_Backend::android-icon-192x192.png" rel="icon" type="image/png" sizes="192x192" />
-        <link src="Sindria_Backend::favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
-        <link src="Sindria_Backend::favicon-96x96.png" rel="icon" type="image/png" sizes="96x96" />
-        <link src="Sindria_Backend::favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
-        <link src="Sindria_Backend::favicon.ico" rel="icon" sizes="16x16" />
-        <link src="Sindria_Backend::manifest.json" rel="manifest" />
+        <link src="Pipe_Backend::apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
+        <link src="Pipe_Backend::apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
+        <link src="Pipe_Backend::apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+        <link src="Pipe_Backend::apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+        <link src="Pipe_Backend::apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+        <link src="Pipe_Backend::apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+        <link src="Pipe_Backend::apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
+        <link src="Pipe_Backend::apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+        <link src="Pipe_Backend::apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+        <link src="Pipe_Backend::android-icon-192x192.png" rel="icon" type="image/png" sizes="192x192" />
+        <link src="Pipe_Backend::favicon-32x32.png" rel="icon" type="image/png" sizes="32x32" />
+        <link src="Pipe_Backend::favicon-96x96.png" rel="icon" type="image/png" sizes="96x96" />
+        <link src="Pipe_Backend::favicon-16x16.png" rel="icon" type="image/png" sizes="16x16" />
+        <link src="Pipe_Backend::favicon.ico" rel="icon" sizes="16x16" />
+        <link src="Pipe_Backend::manifest.json" rel="manifest" />
         <meta name="msapplication-TileColor" content="#ffffff" />
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
 
-        <css src="Sindria_Backend::css/main.css"/>
+        <css src="Pipe_Backend::css/main.css"/>
     </head>
     <body>
         <referenceBlock name="logo">
             <arguments>
                 <argument name="template" xsi:type="string">
-                    Sindria_Backend::page/header.phtml
+                    Pipe_Backend::page/header.phtml
                 </argument>
                 <argument name="show_part" xsi:type="string">logo</argument>
                 <argument name="edition" translate="true" xsi:type="string">Community Edition</argument>
-                <argument name="logo_image_src" xsi:type="string">Sindria_Backend::images/sindria-logo.png</argument>
+                <argument name="logo_image_src" xsi:type="string">Pipe_Backend::images/sindria-logo.png</argument>
             </arguments>
         </referenceBlock>
 
         <referenceBlock name="copyright">
             <arguments>
                 <argument name="template" xsi:type="string">
-                    Sindria_Backend::page/copyright.phtml
+                    Pipe_Backend::page/copyright.phtml
                 </argument>
             </arguments>
         </referenceBlock>
 
-        <referenceBlock name="version" class="Sindria\Backend\Block\Page\Footer">
+        <referenceBlock name="version" class="Pipe\Backend\Block\Page\Footer">
             <arguments>
                 <argument name="template" xsi:type="string">
-                    Sindria_Backend::page/footer.phtml
+                    Pipe_Backend::page/footer.phtml
                 </argument>
             </arguments>
         </referenceBlock>
