--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/view/adminhtml/layout/admin_login.xml
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Backend/view/adminhtml/layout/admin_login.xml
@@ -4,7 +4,7 @@
     <body>
         <referenceBlock name="logo">
             <arguments>
-                <argument name="logo_image_src" xsi:type="string">Sindria_Backend::images/sindria-logo.png</argument>
+                <argument name="logo_image_src" xsi:type="string">Pipe_Backend::images/sindria-logo.png</argument>
             </arguments>
         </referenceBlock>
     </body>
