--- a/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Cart/view/frontend/templates/cart.phtml
+++ b/Products/XPipe/Web/xpipe-v1-web-portal/src/app/code/Pipe/Cart/view/frontend/templates/cart.phtml
@@ -16,7 +16,7 @@
 <script>
 
     //$.ajax({
-    //    url: '<?php //echo $block->getUrl('sindria/items/remove');?>//',
+    //    url: '<?php //echo $block->getUrl('pipe/items/remove');?>//',
     //    type: 'POST',
     //    showLoader: true,
     //    success: function (res) {
@@ -36,7 +36,7 @@
 <!--<script type="text/x-magento-init">-->
 <!--    {-->
 <!--        "*": {-->
-<!--            "Sindria_Cart/js/test": {}-->
+<!--            "Pipe_Cart/js/test": {}-->
 <!--        }-->
 <!--    }-->
 <!---->
