fix news module naming

--- a/Cms/V1/Module/News/view/adminhtml/web/css/news-menu.css
+++ b/Cms/V1/Module/News/view/adminhtml/web/css/news-menu.css
@@ -1,4 +1,4 @@
-#menu-sindria-news-news > a:before {
+#menu-cms-news-news > a:before {
 
     /** Font Awesome Icons **/
     /** https://fontawesome.com/v6/icons **/
