--- a/Cms/V1/Module/News/view/frontend/layout/news_index_index.xml
+++ b/Cms/V1/Module/News/view/frontend/layout/news_index_index.xml
@@ -9,7 +9,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block name="sindria.news"
+            <block name="cms.news"
                    template="Cms_News::news.phtml">
                 <arguments>
                     <argument name="view_model" xsi:type="object">Cms\News\ViewModel\NewsViewModel</argument>
